--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@govbr-ds/core": "^3.5.1",
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.8",
+    "immer": "^10.1.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.3",
     "storybook": "^8.0.8",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.3.3",
